# arcflash

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml
configs/: config_example.toml  config_ipad.toml  config_two_surges.toml
src/: config.rs  extension.rs  handler.rs  labeler.rs  main.rs  peer.rs  sender.rs  tests.rs
src/extension/: filter_type.rs  fx_type.rs  name_lookup.rs  names.rs  system.rs
src/extension/system/: patchbay.rs
src/osc/: mod.rs
