[package]
name = "arcflash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-osc = "0.2.0"
async-recursion = "1.0.5"
async-std = "1.12.0"
chrono = "0.4.31"
clap = "4.4.12"
env_logger = "0.10.1"
lazy_static = "1.4.0"
log = "0.4"
rand = "0.8.5"
regex = "1.10.2"
serde = { version = "1.0.193", features = ["derive"] }
toml = "0.8.8"
