[package]
name = "arcflash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.12"
dirs = "5.0.1"
env_logger = "0.10.1"
flume = "0.11.0"
lazy_static = "1.4.0"
log = "0.4"
rand = "0.8.5"
regex = "1.10.2"
rosc = "0.10.1"
serde = { version = "1.0.193", features = ["derive"] }
sys-info = "0.9.1"
toml = "0.8.8"
